[package]
name = "van-colleague"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4"
bluer = { version = "0.17.0-pre1", features = ["full"] }
clap = "4.4"
env_logger = "0.10"
fs2 = "0.4"
futures = "0.3"
log = "0.4"
regex = "1.10"
reqwest = "0.11"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.34", features = ["full"] }

device = { path = "../device/" }
