[package]
name = "van-colleague"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
bluer = { version = "0.17.0", features = ["full"] }
clap = "4.5.2"
env_logger = "0.11.3"
fs2 = "0.4.3"
futures = "0.3.30"
log = "0.4.21"
regex = "1.10.3"
reqwest = "0.11.24"
serde = "1.0.197"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }

device = { path = "../device/" }
#device = { git = "https://github.com/vancolleague/device.git" }
